#786 Sorting fix and alignment

--- a/apps/forms-flow-ai/forms-flow-web/src/components/FOI/customComponents/Comments/comments.scss
+++ b/apps/forms-flow-ai/forms-flow-web/src/components/FOI/customComponents/Comments/comments.scss
@@ -8,6 +8,7 @@
     
   .inputBox{
     width:100%;
+    margin:25px;
   }  
 
   .inputActions{
@@ -73,6 +74,10 @@
     padding: 8px;
     padding-bottom: 15px;
     border-radius: 8px;
+    width: 95%;
+    border-color: lightgrey;
+    border-width: 1px;
+    border-style: solid;
     .userImg{
       display: flex;
       width:10%;
@@ -81,16 +86,16 @@
     }
 
     .postComment{
-      width:80%;
+      width:90%;
       border: none;
-      border-bottom: 1px solid rgb(24, 24, 24);
+      // border-bottom: 1px solid rgb(24, 24, 24);
       text-decoration: none;
       background-color: transparent;
       margin-left: 4px;
     }
     .postComment:focus {
       outline:none;
-      border-bottom: 2px solid rgb(14, 14, 14);
+      // border-bottom: 2px solid rgb(14, 14, 14);
     }
     .postComment::placeholder{
       margin-top: -2px;
